--- a/content/DPS/PRS/Railways/1.md
+++ b/content/DPS/PRS/Railways/1.md
@@ -4,8 +4,11 @@ date: 2017-10-17T15:26:15Z
 draft: false
 ---
 
-## Railway #1 西铁线 West Rail Line（WRL）是DPS的第一条长途铁路，南北贯穿新区-滨海湾-龙门
-## 目前已开通区间：新东合作区（NEC）——蘑菇岛北（MIN），11个车站，逾6000格
+### Railway #1 西铁线 West Rail Line（WRL）是DPS的第一条长途铁路，南北贯穿新区-滨海湾-龙门
+### 目前已开通区间：新东合作区（NEC）——蘑菇岛北（MIN），11个车站，逾6000格
+
+---
+
 ### 已开通车站（由北向南）：
 #### 1.新东合作区 NEC 
 * 转乘 S8 东山连接线、S11 新区南线 
@@ -22,10 +25,10 @@ draft: false
 #### 7.山水北 SSN 
 * 转乘 S104N 山水公路-北段
 #### 8.南村 SVZ 
-* 转乘 S7W 南村连接线、S104S 山水公路-南端
+* 转乘 S7W 南村连接线、S104S 山水公路-南段
 #### 9.沙漠北 SMN 
 * （暂无道路接驳）
 #### 10.沙漠南 SMS 
-* 转乘S201沙城公路 
+* 转乘 S201 沙城公路 
 #### 11.蘑菇岛北 MGN 
 * （暂无道路接驳）
