--- a/content/DPS/PRS/Railways/1.md
+++ b/content/DPS/PRS/Railways/1.md
@@ -4,24 +4,30 @@ date: 2017-10-17T15:26:15Z
 draft: false
 ---
 
-### Railway #1 西铁线 West Rail Line（WRL）是DPS的第一条长途铁路，南北贯穿新区-滨海湾-龙门
+### Railway #1 西铁线 West Rail Line（WRL）是DPS的第一条长途铁路，南北贯穿新界-滨海湾-龙门 三市
 ### 目前已开通区间：新东合作区（NEC）——蘑菇岛北（MIN），11个车站，逾6000格
 
 ---
 
-### 已开通车站（由北向南）：
+## 已开通车站（由北向南）：
+
+### 二期北:
 #### 1.新东合作区 NEC 
 * 转乘 S8 东山连接线、S11 新区南线 
 #### 2.袭击塔 XJT 
 * 转乘 S102 湖心岛大道 
 #### 3.北山 NMZ 
 * 转乘 S1 中心纵线 
+
+### 一期:
 #### 4.中心 BHC 
 * 转乘 S2 新区横线、S103 海龟公路 
 #### 5.中心南 BCS 
 * 转乘 S1 中心纵线 
 #### 6.管理中心 BMC 
 * 转乘 S101 滨海大道、S103 海龟公路
+
+### 二期南：
 #### 7.山水北 SSN 
 * 转乘 S104N 山水公路-北段
 #### 8.南村 SVZ 
@@ -32,3 +38,27 @@ draft: false
 * 转乘 S201 沙城公路 
 #### 11.蘑菇岛北 MGN 
 * （暂无道路接驳）
+
+## 修建、规划中的车站：
+
+### 三期北：
+#### 新区南 BNS
+#### 新区 BNR
+#### 新区北 BNN
+
+### 三期南：
+#### 蘑菇岛 MGD
+#### 蘑菇岛南 MGS
+#### 海傍 SSZ
+
+### 四期北：
+#### 滨海湾北 BHN
+#### 龙门南 LMS
+#### 雪山 SMZ
+
+### 四期南：
+#### 太平北
+#### 太平
+#### 太平南
+
+### 五期：待定
