--- a/content/DPS/PRS/Railways/1.md
+++ b/content/DPS/PRS/Railways/1.md
@@ -5,14 +5,14 @@ draft: false
 ---
 
 ### Railway #1 西铁线 West Rail Line（WRL）是DPS的第一条长途铁路，南北贯穿新界-滨海湾-龙门 三市
-### 目前已开通区间：新东合作区（NEC）——蘑菇岛北（MIN），11个车站，逾6000格
+### 目前已开通区间：东区西（ERC）—— 蘑菇岛北（MIN），11个车站，逾6000格
 
 ---
 
 ## 已开通车站（由北向南）：
 
 ### 二期北:
-#### 1.新东合作区 NEC 
+#### 1.东区西 ERC
 * 转乘 S8 东山连接线、S11 新区南线 
 #### 2.袭击塔 XJT 
 * 转乘 S102 湖心岛大道 
@@ -42,23 +42,11 @@ draft: false
 ## 修建、规划中的车站：
 
 ### 三期北：
-#### 新区南 BNS
-#### 新区 BNR
-#### 新区北 BNN
+#### 东区北 ERN
+#### 北正东 BZE
+#### 雪山西 SMW
 
 ### 三期南：
 #### 蘑菇岛 MGD
 #### 蘑菇岛南 MGS
 #### 海傍 SSZ
-
-### 四期北：
-#### 滨海湾北 BHN
-#### 龙门南 LMS
-#### 雪山 SMZ
-
-### 四期南：
-#### 太平北
-#### 太平
-#### 太平南
-
-### 五期：待定
