--- a/content/DPS/PRS/Railways/2.md
+++ b/content/DPS/PRS/Railways/2.md
@@ -4,5 +4,23 @@ date: 2017-10-17T15:26:15Z
 draft: false
 ---
 
-### Railway #2 滨城线 Binhai City Line（BCL）是DPS的第二条长途铁路，东西贯穿龙门-滨海湾-启东-微光 四市。
-### 目前还在规划中
+### Railway #2 滨城线 Binhai City Line（BCL）是DPS的第二条长途铁路，东西贯穿龙门-滨海湾-西湾 三市。
+### 目前已开通区间：中心（BHC）—— 东区西（MIN），4个车站，逾2000格
+
+## 已开通车站（由东向西）：
+### 东段：
+#### 1.东区西 ERC
+* 转乘 S8 东山连接线
+#### 2.袭击塔 XJT 
+* 转乘 S102 湖心岛大道 
+#### 3.北山 NMZ 
+* 转乘 S1N 中心北线 
+#### 4.中心 BHC
+* 换乘 R1、S103海龟公路、S2中心横线
+
+## 修建、规划中的车站：
+### 西段：
+#### 西区南
+#### 江北东
+#### 江北西
+#### 樱花林
