--- a/content/DPS/PRS/Railways/2.md
+++ b/content/DPS/PRS/Railways/2.md
@@ -20,7 +20,7 @@ draft: false
 
 ## 修建、规划中的车站：
 ### 西段：
-#### 西区南
-#### 江北东
-#### 江北西
-#### 樱花林
+#### 西区南 WRS
+#### 江北东 RNE
+#### 江北西 RNW
+#### 樱花林 CBF
