--- a/content/DPS/PRS/Railways/1.md
+++ b/content/DPS/PRS/Railways/1.md
@@ -1,64 +1,42 @@
 ---
-title: "Railway #1 西铁线"
+title: "Railway #1 新龙线"
 date: 2017-10-17T15:26:15Z
 draft: false
 ---
 
-### Railway #1 西铁线 West Rail Line（WRL）是DPS的第一条长途铁路，南北贯穿新界-滨海湾-龙门 三市
-### 目前已开通区间：新东合作区（NEC）——蘑菇岛北（MIN），11个车站，逾6000格
+### Railway #1 新龙线 New Loong Line（NLL）于DPS 2.0重新规划，南北贯穿新界-滨海湾-龙门 三市
+### 目前已开通区间：中心（BHC）—— 蘑菇岛北（MIN），8个车站，逾4000格
 
 ---
 
 ## 已开通车站（由北向南）：
 
-### 二期北:
-#### 1.新东合作区 NEC 
-* 转乘 S8 东山连接线、S11 新区南线 
-#### 2.袭击塔 XJT 
-* 转乘 S102 湖心岛大道 
-#### 3.北山 NMZ 
-* 转乘 S1 中心纵线 
-
-### 一期:
-#### 4.中心 BHC 
+### 南一期:
+#### 1.中心 BHC 
 * 转乘 S2 新区横线、S103 海龟公路 
-#### 5.中心南 BCS 
+#### 2.中心南 BCS 
 * 转乘 S1 中心纵线 
-#### 6.管理中心 BMC 
+#### 3.管理中心 BMC 
 * 转乘 S101 滨海大道、S103 海龟公路
 
-### 二期南：
-#### 7.山水北 SSN 
+### 南二期：
+#### 4.山水北 SSN 
 * 转乘 S104N 山水公路-北段
-#### 8.南村 SVZ 
+#### 5.南村 SVZ 
 * 转乘 S7W 南村连接线、S104S 山水公路-南段
-#### 9.沙漠北 SMN 
+#### 6.沙漠北 SMN 
 * （暂无道路接驳）
-#### 10.沙漠南 SMS 
+#### 7.沙漠南 SMS 
 * 转乘 S201 沙城公路 
-#### 11.蘑菇岛北 MGN 
+#### 8.蘑菇岛北 MGN 
 * （暂无道路接驳）
 
 ## 修建、规划中的车站：
-
-### 三期北：
-#### 新区南 BNS
-#### 新区 BNR
-#### 新区北 BNN
-
-### 三期南：
-#### 蘑菇岛 MGD
+### 南三期：
 #### 蘑菇岛南 MGS
-#### 海傍 SSZ
+#### 海洋 NOZ
 
-### 四期北：
-#### 滨海湾北 BHN
-#### 龙门南 LMS
-#### 雪山 SMZ
-
-### 四期南：
-#### 太平北
-#### 太平
-#### 太平南
-
-### 五期：待定
+### 北段：
+#### 西区北 WRN
+#### 龙门 LMZ
+#### 林地府邸 FMZ
